Link in github page

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Status
-Theme URI: https://github.com/buddypress-themers/status 
+Theme URI: http://buddypress-themers.github.com/status/
 Description: An activity stream focused child theme for BuddyPress
 Version: 1.2
 License: GNU General Public License
