Padding fix for content

--- a/_inc/css/status.css
+++ b/_inc/css/status.css
@@ -2740,7 +2740,7 @@ overflow: hidden;
 clear:none;
 }
 .groups #content, #content-register, #content, #content-404,  #content-profile, .home .status-signup {
-padding: 0em 1em;
+padding: 0em;
 }
 #content, #content-404, .directory #content-profile {
 padding: 0 1em 1em 1em;
